@@ -1,0 +1,15 @@
+// Copyright (c) 2024 Yuki Kimoto
+// MIT License
+
+#include "spvm_native.h"
+
+
+
+static const char* FILE_NAME = "Net/SSLeay/X509_REVOKED.c";
+
+int32_t SPVM__Net__SSLeay__X509_REVOKED__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  return 0;
+}
+
+
