@@ -1,0 +1,5 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::X509_REVOKED {
+}
